--- a/index.css
+++ b/index.css
@@ -41,6 +41,10 @@ h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase;
 }
 
+h1 {
+    font-size: 400%;
+}
+
 p {
     text-align: justify;
     color: var(--p-color);
@@ -166,6 +170,8 @@ nav {
     transition: 0.5s;
     background-color: var(--background-color);
     z-index: 1000;
+    display: flex !important;
+    justify-content: space-between !important;
 }
 
 nav a {
